--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/sy-logo.png" width="125px">
+                    <img src="sy-logo.png" width="125px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -25,7 +25,7 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <img src="images/shoping bag.webp" width="30px" height="30px" class="cartimg">
+                <img src="shoping bag.webp" width="30px" height="30px" class="cartimg">
 
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <tr>
                     <td>
                         <div class="cart-info">
-                            <img src="images/belle cargo.jpg" width="300px" height="350px">
+                            <img src="belle cargo.jpg" width="300px" height="350px">
                             <div>
                                 <p>Belle Cargo</p>
                                 <small>Price</small>
@@ -63,7 +63,7 @@
                 <tr>
                     <td>
                         <div class="cart-info">
-                            <img src="images/black maxi.jpg" width="300px" height="350px">
+                            <img src="black maxi.jpg" width="300px" height="350px">
                             <div>
                                 <p>Black Maxi</p>
                                 <small>Price</small>
@@ -79,7 +79,7 @@
                 <tr>
                     <td>
                         <div class="cart-info">
-                            <img src="images/halter crop.jpg" width="300px" height="350px">
+                            <img src="halter crop.jpg" width="300px" height="350px">
                             <div>
                                 <p>Halter crop top</p>
                                 <small>Price</small>
@@ -120,7 +120,7 @@
                         <p> Talk to a customer service<br> representative via call or text on 050915039 </p>
                     </div>
                     <div class="footer-col-2">
-                        <img src="images/sy-logo.png">
+                        <img src="sy-logo.png">
                         <p>Our aim is to provide quality but <br>affordable clothing that would absolutely blow your mind</p>
                     </div>
                     <div class="footer-col-3">
