--- a/account.html
+++ b/account.html
@@ -15,7 +15,7 @@
     <div class="header">
         <div class="container">
             <div class="navbar">
-                <div class="logo"><a href="website.html">  <img src="images/sy-logo.png" width="125px"></a>
+                <div class="logo"><a href="website.html">  <img src="sy-logo.png" width="125px"></a>
                   
                 </div>
                 <nav>
@@ -26,7 +26,7 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"> <img src="images/shoping bag.webp" width="30px" height="30px" class="cartimg"></a>
+                <a href="cart.html"> <img src="shoping bag.webp" width="30px" height="30px" class="cartimg"></a>
             </div>
         </div>
         <!--account page-->
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="images/ac.jpg" width="300px" height="400px">
+                        <img src="ac.jpg" width="300px" height="400px">
                     </div>
                     <div class="col-2">
                         <div class="form-container">
@@ -70,7 +70,7 @@
                         <p> Talk to a customer service<br> representative via call or text on 050915039 </p>
                     </div>
                     <div class="footer-col-2">
-                        <img src="images/sy-logo.png">
+                        <img src="sy-logo.png">
                         <p>Our aim is to provide quality but <br>affordable clothing that would absolutely blow your mind</p>
                     </div>
                     <div class="footer-col-3">
