--- a/lux.html
+++ b/lux.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Brunch Dresses - SHOPYVIEE | ONLINE SHOP</title>
+    <title> Lux Collection - SHOPYVIEE | ONLINE SHOP</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
@@ -32,7 +32,7 @@
 
         <div class="small-container">
             <div class="row row-2">
-                <h2>Brunch Dresses</h2>
+                <h2>Lux Collection</h2>
             </div>
             <select>
                 <option>Bestsellers</option>
@@ -44,8 +44,8 @@
 
             <div class="row">
                 <div class="col-4">
-                    <img src="b1.jpg" height="350px">
-                    <h4>Sily dress</h4>
+                    <img src="l5.jpg" height="350px">
+                    <h4>Bella</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -68,8 +68,8 @@
                     <p>GHC 180.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="leopard prin.jpg" height="350px">
-                    <h4>Leopard Print Maxi</h4>
+                    <img src="l6.jpg" height="350px">
+                    <h4>Pamiere</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -77,11 +77,11 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 200.00</p>
+                    <p>GHC 400.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="chic mini.jpg" height="350px">
-                    <h4>Chic Mini Dress</h4>
+                    <img src="l8.jpg" height="350px">
+                    <h4>Fabulusso Atelier</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -89,7 +89,7 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 150.00</p>
+                    <p>GHC 450.00</p>
                 </div>
                 <div class="col-4">
                     <img src="black maxi.jpg" height="350px">
@@ -104,8 +104,8 @@
                     <p>GHC 150.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b2.jpg" height="350px">
-                    <h4>Couture </h4>
+                    <img src="couture top.jpg" height="350px">
+                    <h4>Couture Top</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -116,8 +116,8 @@
                     <p>GHC 150.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b3.jpg" height="350px">
-                    <h4>Belle Essenza</h4>
+                    <img src="l5.jpg" height="350px">
+                    <h4>Shenaya</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -128,8 +128,8 @@
                     <p>GHC 200.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b4.jpg" height="350px">
-                    <h4>Hally </h4>
+                    <img src="l4.jpg" height="350px">
+                    <h4>Bahamas</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -137,11 +137,11 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 160.00</p>
+                    <p>GHC 100.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b5.jpg" height="350px">
-                    <h4>Signora</h4>
+                    <img src="shimmer.jpg" height="350px">
+                    <h4>Signature Rhinestone BustierS</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -164,8 +164,8 @@
                     <p>GHC 170.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b6.jpg" height="350px">
-                    <h4>Basuta</h4>
+                    <img src="l1.jpg" height="350px">
+                    <h4>Lumiere</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -176,8 +176,8 @@
                     <p>GHC 165.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b7.jpg" height="350px">
-                    <h4>Silla</h4>
+                    <img src="pa1.jpg" height="350px">
+                    <h4>Silk pants</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -185,11 +185,11 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 190.00</p>
+                    <p>GHC 100.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b8.jpg" height="350px">
-                    <h4>Pella</h4>
+                    <img src="pleat y.jpg" height="350px">
+                    <h4>Pleated Dress</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -200,8 +200,8 @@
                     <p>GHC 300.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b9.jpg" height="350px">
-                    <h4>Senorita C</h4>
+                    <img src="senorita blouse.jpg" height="350px">
+                    <h4>Senorita Crop Top</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -209,11 +209,11 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 199.00</p>
+                    <p>GHC 100.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b10.jpg" height="350px">
-                    <h4>Yema</h4>
+                    <img src="satin sk.jpg" height="350px">
+                    <h4>Satin Skirt</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -221,11 +221,11 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 190.00</p>
+                    <p>GHC 90.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b11.jpg" height="350px">
-                    <h4>Puta</h4>
+                    <img src="blazer.jpg" height="350px">
+                    <h4>Blazer Dress</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
