--- a/plus size.html
+++ b/plus size.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Brunch Dresses - SHOPYVIEE | ONLINE SHOP</title>
+    <title> Plus Size - SHOPYVIEE | ONLINE SHOP</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
@@ -32,7 +32,7 @@
 
         <div class="small-container">
             <div class="row row-2">
-                <h2>Brunch Dresses</h2>
+                <h2>Plus Size</h2>
             </div>
             <select>
                 <option>Bestsellers</option>
@@ -44,8 +44,8 @@
 
             <div class="row">
                 <div class="col-4">
-                    <img src="b1.jpg" height="350px">
-                    <h4>Sily dress</h4>
+                    <img src="pl1.jpg" height="350px">
+                    <h4>Rucha</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -56,8 +56,8 @@
                     <p>GHC 190.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="leather dress.jpg" height="350px">
-                    <h4>Leather Dress</h4>
+                    <img src="pl2.jpg" height="350px">
+                    <h4>Leah</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -68,8 +68,8 @@
                     <p>GHC 180.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="leopard prin.jpg" height="350px">
-                    <h4>Leopard Print Maxi</h4>
+                    <img src="pl3.jpg" height="350px">
+                    <h4>Printax </h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -80,8 +80,8 @@
                     <p>GHC 200.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="chic mini.jpg" height="350px">
-                    <h4>Chic Mini Dress</h4>
+                    <img src="pl4.jpg" height="350px">
+                    <h4>Chic Miniat</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -92,8 +92,8 @@
                     <p>GHC 150.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="black maxi.jpg" height="350px">
-                    <h4>Black Maxi Dress</h4>
+                    <img src="pl17.jpg" height="350px">
+                    <h4>lakala</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -104,8 +104,8 @@
                     <p>GHC 150.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b2.jpg" height="350px">
-                    <h4>Couture </h4>
+                    <img src="pl6.jpg" height="350px">
+                    <h4>Coutulla</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -116,8 +116,8 @@
                     <p>GHC 150.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b3.jpg" height="350px">
-                    <h4>Belle Essenza</h4>
+                    <img src="pl7.jpg" height="350px">
+                    <h4>Cargolla</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -128,68 +128,8 @@
                     <p>GHC 200.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b4.jpg" height="350px">
-                    <h4>Hally </h4>
-                    <div class="rating">
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                    </div>
-                    <p>GHC 160.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="b5.jpg" height="350px">
-                    <h4>Signora</h4>
-                    <div class="rating">
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                    </div>
-                    <p>GHC 250.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="p1.jpg" height="350px">
-                    <h4>Pink knit dress</h4>
-                    <div class="rating">
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                    </div>
-                    <p>GHC 170.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="b6.jpg" height="350px">
-                    <h4>Basuta</h4>
-                    <div class="rating">
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                    </div>
-                    <p>GHC 165.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="b7.jpg" height="350px">
-                    <h4>Silla</h4>
-                    <div class="rating">
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                        <a href="" class="rating"> &#9733; </a>
-                    </div>
-                    <p>GHC 190.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="b8.jpg" height="350px">
-                    <h4>Pella</h4>
+                    <img src="pl8.jpg" height="350px">
+                    <h4>Pena</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -200,8 +140,8 @@
                     <p>GHC 300.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b9.jpg" height="350px">
-                    <h4>Senorita C</h4>
+                    <img src="pl9.jpg" height="350px">
+                    <h4>manora</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -209,11 +149,71 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <p>GHC 199.00</p>
+                    <p>GHC 250.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b10.jpg" height="350px">
-                    <h4>Yema</h4>
+                    <img src="pl10.jpg" height="350px">
+                    <h4>Pinkali</h4>
+                    <div class="rating">
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                    </div>
+                    <p>GHC 170.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="pl11.jpg" height="350px">
+                    <h4>Amma</h4>
+                    <div class="rating">
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                    </div>
+                    <p>GHC 165.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="pl12.jpg" height="350px">
+                    <h4>Silkat</h4>
+                    <div class="rating">
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                    </div>
+                    <p>GHC 200.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="pl13.jpg" height="350px">
+                    <h4>Ma Russo</h4>
+                    <div class="rating">
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                    </div>
+                    <p>GHC 300.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="pl14.jpg" height="350px">
+                    <h4>Senorita Masherita</h4>
+                    <div class="rating">
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                        <a href="" class="rating"> &#9733; </a>
+                    </div>
+                    <p>GHC 100.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="pl15.jpg" height="350px">
+                    <h4>zumba</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
@@ -224,8 +224,8 @@
                     <p>GHC 190.00</p>
                 </div>
                 <div class="col-4">
-                    <img src="b11.jpg" height="350px">
-                    <h4>Puta</h4>
+                    <img src="pl16.jpg" height="350px">
+                    <h4>salsa</h4>
                     <div class="rating">
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
