--- a/account.html
+++ b/account.html
@@ -15,12 +15,12 @@
     <div class="header">
         <div class="container">
             <div class="navbar">
-                <div class="logo"><a href="website.html">  <img src="sy-logo.png" width="125px"></a>
+                <div class="logo"><a href="index.html">  <img src="sy-logo.png" width="125px"></a>
                   
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="website.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
 
                         <li><a href="account.html">Account</a></li>
