--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="website.html"> <img src="images/sy-logo.png" width="125px"></a>
+                    <a href="index.html"> <img src="images/sy-logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="website.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
 
                         <li><a href="account.html">Account</a></li>
