--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="website.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
                         <li><a href="account.html">Account</a></li>
                     </ul>
