--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="index.html"> <img src="images/sy-logo.png" width="125px"></a>
+                    <a href="index.html"> <img src="sy-logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -26,7 +26,7 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="images/shoping bag.webp" width="30px " height="30px" class="cartimg"></a>
+                <a href="cart.html"><img src="shoping bag.webp" width="30px " height="30px" class="cartimg"></a>
 
             </div>
             <div class="row">
@@ -36,7 +36,7 @@
                     <a href="products.html" class="btn">Explore Now &#10158;</a>
                 </div>
                 <div class="col-2">
-                    <img src="images/img1.jpg">
+                    <img src="img1.jpg">
                 </div>
             </div>
         </div>
@@ -46,15 +46,15 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <a href="plus size.html"><img src="images/category 1.jpg" height="400px" width="300px"></a>
+                    <a href="plus size.html"><img src="category 1.jpg" height="400px" width="300px"></a>
                     <figcaption>Plus Size</figcaption>
                 </div>
                 <div class="col-3">
-                    <a href="brunch.html"><img src="images/category2.jpg" height="400px" width="300px"></a>
+                    <a href="brunch.html"><img src="category2.jpg" height="400px" width="300px"></a>
                     <figcaption>Brunch dresses</figcaption>
                 </div>
                 <div class="col-3">
-                    <a href="lux.html"><img src="images/category 3.jpg" height="400px" width="300px"></a>
+                    <a href="lux.html"><img src="category 3.jpg" height="400px" width="300px"></a>
                     <figcaption>Lux Collection</figcaption>
                 </div>
             </div>
@@ -65,7 +65,7 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <a href="prd details.html"><img src="images/a1.jpg" height="350px"></a>
+                <a href="prd details.html"><img src="a1.jpg" height="350px"></a>
                 <a href="prd details.html">
                     <h4>Purple Boho Pants</h4>
                 </a>
@@ -79,7 +79,7 @@
                 <p>GHC 180.00</p>
             </div>
             <div class="col-4">
-                <img src="images/luxdress.jpg" height="350px">
+                <img src="luxdress.jpg" height="350px">
                 <h4>Side Slit Lux Dress</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -91,7 +91,7 @@
                 <p>GHC 450.00</p>
             </div>
             <div class="col-4">
-                <img src="images/corset.jpg" height="350px">
+                <img src="corset.jpg" height="350px">
                 <h4>Rhinestone Corsert</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -103,7 +103,7 @@
                 <p>GHC 250.00</p>
             </div>
             <div class="col-4">
-                <img src="images/cargo jeans.jpg" height="350px">
+                <img src="cargo jeans.jpg" height="350px">
                 <h4>Cargo Denim Jeans</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -118,7 +118,7 @@
         <h2 class="title">New Arrivals</h2>
         <div class="row">
             <div class="col-4">
-                <img src="images/pants.jpg" height="350px">
+                <img src="pants.jpg" height="350px">
                 <h4>Ruched Pants</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -130,7 +130,7 @@
                 <p>GHC 190.00</p>
             </div>
             <div class="col-4">
-                <img src="images/leather dress.jpg" height="350px">
+                <img src="leather dress.jpg" height="350px">
                 <h4>Leather Dress</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -142,7 +142,7 @@
                 <p>GHC 180.00</p>
             </div>
             <div class="col-4">
-                <img src="images/leopard prin.jpg" height="350px">
+                <img src="leopard prin.jpg" height="350px">
                 <h4>Leopard Print Maxi</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -154,7 +154,7 @@
                 <p>GHC 200.00</p>
             </div>
             <div class="col-4">
-                <img src="images/chic mini.jpg" height="350px">
+                <img src="chic mini.jpg" height="350px">
                 <h4>Chic Mini Dress</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -166,7 +166,7 @@
                 <p>GHC 150.00</p>
             </div>
             <div class="col-4">
-                <img src="images/black maxi.jpg" height="350px">
+                <img src="black maxi.jpg" height="350px">
                 <h4>Black Maxi Dress</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -178,7 +178,7 @@
                 <p>GHC 150.00</p>
             </div>
             <div class="col-4">
-                <img src="images/couture top.jpg" height="350px">
+                <img src="couture top.jpg" height="350px">
                 <h4>Couture Top</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -190,7 +190,7 @@
                 <p>GHC 150.00</p>
             </div>
             <div class="col-4">
-                <img src="images/belle cargo.jpg" height="350px">
+                <img src="belle cargo.jpg" height="350px">
                 <h4>Belle Cargo</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -202,7 +202,7 @@
                 <p>GHC 200.00</p>
             </div>
             <div class="col-4">
-                <img src="images/halter crop.jpg" height="350px">
+                <img src="halter crop.jpg" height="350px">
                 <h4>Halter Crop Top</h4>
                 <div class="rating">
                     <a href="" class="rating"> &#9733; </a>
@@ -220,7 +220,7 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="images/shimmer.jpg" class="offer-img">
+                    <img src="shimmer.jpg" class="offer-img">
                 </div>
                 <div class="col-2">
                     <p>Luxury YV Signature pieces</p>
@@ -245,7 +245,7 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <img src="images/test 1.jpg">
+                    <img src="test 1.jpg">
                     <h3> Kweku Ayepah</h3>
                 </div>
                 <div class="col-3">
@@ -258,7 +258,7 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <img src="images/test 2.jpg">
+                    <img src="test 2.jpg">
                     <h3> Akosua Kwanin</h3>
                 </div>
                 <div class="col-3">
@@ -271,7 +271,7 @@
                         <a href="" class="rating"> &#9733; </a>
                         <a href="" class="rating"> &#9733; </a>
                     </div>
-                    <img src="images/test 4.jpg">
+                    <img src="test 4.jpg">
                     <h3> Clinton Opoku</h3>
                 </div>
             </div>
@@ -282,13 +282,13 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="images/mtn logo.png" height="50px" width="100px">
+                    <img src="mtn logo.png" height="50px" width="100px">
                 </div>
                 <div class="col-5">
-                    <img src="images/voda logo.png" height="50px" width="130px">
+                    <img src="voda logo.png" height="50px" width="130px">
                 </div>
                 <div class="col-5">
-                    <img src="images/acess logo.png" height="50px" width="120px">
+                    <img src="acess logo.png" height="50px" width="120px">
                 </div>
             </div>
         </div>
@@ -304,7 +304,7 @@
                 <p> Talk to a customer service<br> representative via call or text on 050915039 </p>
             </div>
             <div class="footer-col-2">
-                <img src="images/sy-logo.png">
+                <img src="sy-logo.png">
                 <p>Our aim is to provide quality but <br>affordable clothing that would absolutely blow your mind</p>
             </div>
             <div class="footer-col-3">
