--- a/lux.html
+++ b/lux.html
@@ -237,10 +237,10 @@
                 </div>
             </div>
             <div class="page-btn">
-                <span>1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>&#8229;</span>
+                <a href="brunch.html"><span>1</span></a>
+                <a href="plus size.html"><span>2</span></a>
+                <a href="lux.html"><span>3</span></a>
+                 <a href="index.html">  <span>&#8229;</span></a> 
 
             </div>
         </div>
